# rules_nodejs

examples/closure/: BUILD.bazel  WORKSPACE  hello.html  hello.js  package.json
